--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -1,20 +1,109 @@
-name: CICD Práctica DevOps
+name: CICD DevOps
 
 on:
   push:
-    branches: [ "main" ]
+    branches: [ "master" ]
   pull_request:
-    branches: [ "main" ]
+    branches: [ "master" ]
 
 jobs:
   init:
-
     runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v3
+    - name: Init
+      run: |
+        echo "init"
 
+  test:
+    runs-on: ubuntu-latest
+    needs: init
+    steps:
+    - uses: actions/checkout@v3
+    - name: Test
+      run: |
+        echo "test"
+ 
+  build:
+    runs-on: ubuntu-latest
+    needs: [init,test]
+    steps:
+    - uses: actions/checkout@v3
+    - name: Build 
+      run: |
+        echo "build"
+  
+  deploy:
+    runs-on: ubuntu-latest
+    needs: build
     steps:
     - uses: actions/checkout@v3
     - name: Build the site in the jekyll/builder container
       run: |
-        docker run \
-        -v ${{ github.workspace }}:/srv/jekyll -v ${{ github.workspace }}/_site:/srv/jekyll/_site \
-        jekyll/builder:latest /bin/bash -c "chmod -R 777 /srv/jekyll && jekyll build --future"
+        echo "deploy" 
+    - name: AWS Credentials
+      uses: aws-actions/configure-aws-credentials@v1
+      with:
+        aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+        aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+        aws-region: us-east-1
+    - name: Copy files to s3
+      run: |
+        aws s3 sync . s3://name: CICD MundoE
+
+on:
+  push:
+    branches: [ "master" ]
+  pull_request:
+    branches: [ "master" ]
+
+jobs:
+  init:
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v3
+    - name: Init
+      run: |
+        echo "init"
+
+  test:
+    runs-on: ubuntu-latest
+    needs: init
+    steps:
+    - uses: actions/checkout@v3
+    - name: Test
+      run: |
+        echo "test"
+ 
+  build:
+    runs-on: ubuntu-latest
+    needs: [init,test]
+    steps:
+    - uses: actions/checkout@v3
+    - name: Build 
+      run: |
+        echo "build"
+  
+  deploy:
+    runs-on: ubuntu-latest
+    needs: build
+    steps:
+    - uses: actions/checkout@v3
+    - name: Build the site in the jekyll/builder container
+      run: |
+        echo "deploy" 
+    - name: AWS Credentials
+      uses: aws-actions/configure-aws-credentials@v1
+      with:
+        aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+        aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+        aws-region: us-east-1
+    - name: Copy files to s3
+      run: |
+        aws s3 sync . s3://pract1-devops
+    - name: Finish
+      run: |
+        aws s3 ls        
+    - name: Finish
+      run: |
+        aws s3 ls        
